# simulation-gazebo_thruster

./: manifest.xml
src/: Actuator.cpp  Actuator.hpp  Actuators.cpp  Actuators.hpp  CMakeLists.txt  GazeboThruster.cpp  GazeboThruster.hpp  Rudder.cpp  Rudder.hpp  Thrusters.cpp  Thrusters.hpp  USVPlugin.cpp  USVPlugin.hpp  Utilities.cpp  Utilities.hpp  msgs.proto
src/thruster_types/: CMakeLists.txt  thruster_types.proto
